--- a/tests/playground.html
+++ b/tests/playground.html
@@ -81,6 +81,7 @@ function start() {
           {comments: true,
            collapse: true,
            disable: true,
+           css: true,
            grid:
              {spacing: 25,
               length: 3,
